--- a/TextFieldFontSize/Base.lproj/Main.storyboard
+++ b/TextFieldFontSize/Base.lproj/Main.storyboard
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder.AppleTV.Storyboard" version="3.0" toolsVersion="11762" systemVersion="16D32" targetRuntime="AppleTV" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder.AppleTV.Storyboard" version="3.0" toolsVersion="13122.19" systemVersion="16F73" targetRuntime="AppleTV" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <device id="appleTV" orientation="landscape">
         <adaptation id="light"/>
     </device>
     <dependencies>
         <deployment identifier="tvOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13104.16"/>
         <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -23,7 +23,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oO8-xd-mf3">
-                                <rect key="frame" x="320" y="100" width="200" height="70"/>
+                                <rect key="frame" x="410" y="100" width="200" height="70"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="200" id="7nV-cv-fnz"/>
                                     <constraint firstAttribute="height" constant="70" id="fHy-ui-aNR"/>
@@ -33,17 +33,17 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ccf-Ml-Azi">
-                                <rect key="frame" x="683" y="92" width="133" height="86"/>
+                                <rect key="frame" x="773" y="92" width="133" height="86"/>
                                 <inset key="contentEdgeInsets" minX="40" minY="20" maxX="40" maxY="20"/>
                                 <state key="normal" title="OK"/>
                             </button>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="oO8-xd-mf3" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="100" id="NCu-Ea-SDY"/>
+                            <constraint firstItem="oO8-xd-mf3" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="100" id="NCu-Ea-SDY"/>
                             <constraint firstItem="ccf-Ml-Azi" firstAttribute="leading" secondItem="oO8-xd-mf3" secondAttribute="trailing" constant="163" id="OeZ-44-1ST"/>
                             <constraint firstItem="oO8-xd-mf3" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="300" id="Rup-ny-Ppn"/>
-                            <constraint firstItem="ccf-Ml-Azi" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="92" id="vcr-eP-wGn"/>
+                            <constraint firstItem="ccf-Ml-Azi" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" constant="92" id="vcr-eP-wGn"/>
                         </constraints>
                     </view>
                     <connections>
